log
Thu 25 Apr 2024 04:03:23 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘Bucket’ undeclared (first use in this function)
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                     ^~~~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:29: error: expected expression before ‘)’ token
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                             ^
Compilation failed
c45714c
Thu 25 Apr 2024 04:05:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘Bucket’ undeclared (first use in this function)
   60 |     map->buckets = (Bucket*)malloc(capacity * sizeof(Bucket*));
      |                     ^~~~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:28: error: expected expression before ‘)’ token
   60 |     map->buckets = (Bucket*)malloc(capacity * sizeof(Bucket*));
      |                            ^
Compilation failed
eb0cb4a
Thu 25 Apr 2024 04:07:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘Bucket’ undeclared (first use in this function)
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                     ^~~~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:29: error: expected expression before ‘)’ token
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                             ^
Compilation failed
29e61e0
Thu 25 Apr 2024 04:07:50 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘Bucket’ undeclared (first use in this function)
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                     ^~~~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:29: error: expected expression before ‘)’ token
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                             ^
Compilation failed
c51691c
Thu 25 Apr 2024 04:14:13 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘Bucket’ undeclared (first use in this function)
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                     ^~~~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:29: error: expected expression before ‘)’ token
   60 |     map->buckets = (Bucket**)malloc(capacity * sizeof(Bucket*));
      |                             ^
Compilation failed
193192a
Sun 19 May 2024 12:21:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:4: error: unterminated comment
   55 |    /*   HashMap* map = (HashMap*)malloc(sizeof(HashMap));
      |    ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3de7478
Sun 19 May 2024 02:18:32 AM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:4: error: unterminated comment
   55 |    /*   HashMap* map = (HashMap*)malloc(sizeof(HashMap));
      |    ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
42d8d7a
Sun 19 May 2024 02:25:26 AM UTC: 
 hashmap.c | 18 ------------------
 1 file changed, 18 deletions(-)
 tests:  0|6
total_score: 0/70
358bd3b
Sun 19 May 2024 02:26:27 AM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
c1553bd
Sun 19 May 2024 02:27:07 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  4|4
total_score: 20/70
2336720
Sun 19 May 2024 02:28:14 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  7|3
total_score: 30/70
b4ded69
Sun 19 May 2024 02:28:52 AM UTC: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 30/70
1ef3d83
